--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
   package="rock.sinsuenios">
 
-  <!--Permissions-->
+  <!-- Permissions -->
   <uses-permission android:name="android.permission.INTERNET" />
   <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
@@ -23,6 +23,10 @@
         <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
     </activity>
+    <activity
+      android:label="@string/title_activity_disks"
+      android:name=".presentation.disks.DisksActivity"
+      android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
   </application>
 
 </manifest>
