--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
   <!-- Permissions -->
   <uses-permission android:name="android.permission.INTERNET" />
   <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+  <uses-permission android:name="android.permission.WAKE_LOCK" />
 
   <application
     android:allowBackup="true"
@@ -27,6 +28,10 @@
     <activity
       android:label="@string/title_activity_disks"
       android:name=".presentation.disks.DisksActivity"
+      android:theme="@style/AppTheme.NoActionBar"/>
+    <activity
+      android:label="@string/title_activity_lyrics"
+      android:name=".presentation.lyrics.LyricsActivity"
       android:theme="@style/AppTheme.NoActionBar"/>
   </application>
 
